--- a/custom-values.yaml
+++ b/custom-values.yaml
@@ -34,12 +34,13 @@ artifactory:
     annotations: 
       kubernetes.io/ingress.class: "nginx"
       nginx.ingress.kubernetes.io/proxy-body-size: "0"
-      nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
-      nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
-      nginx.ingress.kubernetes.io/rewrite-target: "/"
-      nginx.ingress.kubernetes.io/configuration-snippet: |
-        rewrite ^/(v2)/token /artifactory/api/docker/null/v2/token;
-        rewrite ^/(v2)/([^\/]*)/(.*) /artifactory/api/docker/$2/$1/$3;  
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "2400s"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "2400s"
+      # Below ingress rules are to use with docker subdomain method
+      #nginx.ingress.kubernetes.io/rewrite-target: "/"
+      #nginx.ingress.kubernetes.io/configuration-snippet: |
+      #  rewrite ^/(v2)/token /artifactory/api/docker/null/v2/token;
+      #  rewrite ^/(v2)/([^\/]*)/(.*) /artifactory/api/docker/$2/$1/$3;  
   mc:
     enabled: true
   jfconnect:
