--- a/custom-values.yaml
+++ b/custom-values.yaml
@@ -34,9 +34,8 @@ artifactory:
     annotations: 
       kubernetes.io/ingress.class: "nginx"
       nginx.ingress.kubernetes.io/proxy-body-size: "0"
-      nginx.ingress.kubernetes.io/proxy-read-timeout: "2400s"
-      nginx.ingress.kubernetes.io/proxy-send-timeout: "2400s"
-      # Below ingress rules are to use with docker subdomain method
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
       #nginx.ingress.kubernetes.io/rewrite-target: "/"
       #nginx.ingress.kubernetes.io/configuration-snippet: |
       #  rewrite ^/(v2)/token /artifactory/api/docker/null/v2/token;
@@ -83,21 +82,12 @@ xray:
   #required block for JAS
   serviceAccount:
     create: true
-    rbac:
-      create: true  
+  rbac:
+    create: true  
   database:
     url: 'postgres://host.docker.internal:5432/xray?sslmode=disable'
     user: jfrog
     password: jfrog
-  xray:  
-    extraSystemYaml:
-      catalog:
-        enabled: true    
-        central:
-          enabled: true
-          url: https://jfrogxraycatalog.jfrog.io/xray
-          username: changeme
-          password: changeme  
 # If enabling Xray, rabbitmq should also be enabled
 rabbitmq:
   enabled: true
@@ -107,5 +97,12 @@ distribution:
     url: 'jdbc:postgresql://host.docker.internal:5432/distribution?sslmode=disable'
     user: jfrog
     password: jfrog
-worker:
+catalog:
   enabled: true
+  database:
+    url: postgres://host.docker.internal:5432/catalogdb?sslmode=disable
+    user: jfrog
+    password: jfrog
+#worker:
+#  enabled: true
+  
